salesforce-classic-Feature-IN-955/src/objects/GetPermissionSet__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Gotransverse Permissions Configure</label>
    <fields>
        <fullName>Order_by__c</fullName>
        <label>Order By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SetName__c</fullName>
        <label>SetName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SetStatus</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>